    - In the psad.conf file, change the ENABLE_PERSISTENCE default to "N" in
      order to (by default) limit psad's memory consumption. The trade off is
      that really "low and slow" scans may be missed in exchange for a better
      operational model. Note the MAX_SCAN_IP_PAIRS variable can also be used
      to control memory consumption if ENABLE_PERSISTENCE is enabled.

psad-2.4.4 (02/20/2017):
    - Added detection for Mirai botnet default credentials scans. These scans
      follow a well-defined pattern of 10 connections to TCP port 23 (telnet)
      followed by a connection to TCP port 2323.
    - Added installation support (install.pl and 'psad.service' file) for
      systems running systemd.
    - Bug fix to not remove auto-blocked IP's from a running psad instance
      with 'psad --Status'.
    - Updated to version 5.2.13 of the whois client.
    - Updated to IPTables::ChainMgr 1.6.

psad-2.4.3 (12/19/2015):
    - Bug fix in fwcheck_psad related to an uninitialized variable related to
      firewalld deployments.
    - Bug fix to add psad process into -K, -S, and -R handling if psad is
      reading iptables logs via journalctl. This is necessary because psad
      fork()'s an extra copy of itself when reading via journalctl.
    - Updated to IPTables::ChainMgr 1.5.

psad-2.4.2 (11/29/2015):
    - Bug fix to apply the EMAIL_ALERT_DANGER_LEVEL threshold to auto-blocking
      emails (reported by itoffshore@github).
    - Bug fix to include the META.yml file for the Unix::Syslog module. This
      issue was reported by github user itvasile as issue #26.
    - Updated IPTables::ChainMgr and IPTables::Parse to 1.4 and 1.6.1
      respectively. The IPTables::Parse update is important because of a
      security vulnerability fixed by Miloslav Trmač. This vulnerability was
      an issue where temporary files used predictable names, and this could be
      leveraged by a local attacker to overwrite any files to which the