@@ -3379,6 +3379,9 @@ sub psad_init() {
     $ipt_opts{'debug'}   = 1 if $debug;
     $ipt_opts{'verbose'} = 1 if $verbose;
 
+    $ipt_opts{'firewall-cmd'} = $config{'FW_CMD'}
+        if $config{'ENABLE_OVERRIDE_FW_CMD'} eq 'Y';
+
     ### build iptables block config hash out of IPT_AUTO_CHAIN keywords
     ### (we don't check ENABLE_AUTO_IDS here since someone may have turned
     ### it off but still want to run --Status checks or use --Flush).
@@ -3626,6 +3629,12 @@ sub validate_config() {
         if ('teststr' =~ $test_re) {
             print STDERR "[+] Syslog parsing regex compiled.\n" if $debug;
         }
+    }
+
+    if ($config{'ENABLE_OVERRIDE_FW_CMD'} eq 'Y') {
+        die "[*] Must set a path to a firewall binary with FW_CMD"
+            if $config{'FW_CMD'} eq 'NONE';
+        $cmds{'iptables'} = $config{'ENABLE_OVERRIDE_FW_CMD'};
     }
 
     return;
@@ -11356,7 +11365,7 @@ sub required_vars() {
         ENABLE_CUSTOM_SYSLOG_TS_RE FW_MSG_READ_MIN_PKTS ENABLE_DNS_LOOKUPS
         ENABLE_WHOIS_LOOKUPS PSAD_FW_READ_PID_FILE DL1_UNIQUE_HOSTS
         DL2_UNIQUE_HOSTS DL3_UNIQUE_HOSTS DL4_UNIQUE_HOSTS DL5_UNIQUE_HOSTS
-        PORT_RANGE_SWEEP_THRESHOLD
+        PORT_RANGE_SWEEP_THRESHOLD ENABLE_OVERRIDE_FW_CMD FW_CMD
     ));
     &defined_vars(\@required_vars);
     return;
