@@ -334,6 +334,11 @@ STATUS_IP_THRESHOLD         25;
 ### CHECK_INTERVAL iterations before the data is logged again).
 TOP_SCANS_CTR_THRESHOLD     1;
 
+### Override iptables automatic search and force a path to a firewall
+### binary.
+ENABLE_OVERRIDE_FW_CMD      N;
+FW_CMD                      NONE;
+
 ### Send scan logs to dshield.org. This is disabled by default,
 ### but is a good idea to enable it (subject to your site security
 ### policy) since the DShield service helps to track the bad guys.
