@@ -42,6 +42,8 @@ SIG_MSG_SYSLOG_THRESHOLD    10;
 SIG_SID_SYSLOG_THRESHOLD    10;
 EXPECT_TCP_OPTIONS          Y;
 MAX_HOPS                    20;
+ENABLE_OVERRIDE_FW_CMD      N;
+FW_CMD                      NONE;
 IGNORE_KERNEL_TIMESTAMP     Y;
 IGNORE_CONNTRACK_BUG_PKTS   Y;
 IGNORE_PORTS                NONE;
